# LanguageBasicExample

./: .gitignore  README.md
c/: CMakeLists.txt  main.c
c/assert/: assert_test.c  assert_test.h
c/clib/: main.c  main_clib.c  main_clib.h
c/clib/assert/: assert_example.c  assert_example.h
c/clib/ctype/: ctype_example.c  ctype_example.h
c/clib/errno/: errno_example.c  errno_example.h
c/clib/stdio/: stdio_example.c  stdio_example.h
c/general/: main_general.c  main_general.h
c/general/print/: print_example.c  print_example.h
c/general/variable/: variable_example.c  variable_example.h
